# nautobot-mcp-server

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  run_server.sh  test_mcp_client.py
.claude/commands/: ship-it.md
.github/workflows/: ci.yml
development/: .env.example  Dockerfile  docker-compose.docs.yml  docker-compose.yml  nautobot_config.py
examples/: devices_in_location.md
nautobot_mcp_server/: __init__.py  __main__.py  server.py
nautobot_mcp_server/resources/: __init__.py  base.py  devices.py  locations.py
nautobot_mcp_server/tools/: __init__.py  base.py  devices.py  graphql.py  jobs.py  locations.py
tests/: __init__.py  conftest.py  test_base.py  test_devices.py  test_graphql.py  test_integration.py  test_jobs.py  test_locations.py
